# contractor

./: .drone.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cuddle.yaml  go.mod  go.sum  main.go
ci/: Cargo.toml
ci/src/: main.rs
cmd/contractor/: main.go
crates/contractor/: Cargo.toml
crates/contractor/src/: api.rs  main.rs  schedule.rs  services.rs  state.rs
crates/contractor/src/services/: bot.rs  engines.rs  gitea.rs  reconciler.rs  renovate.rs
crates/contractor/src/services/engines/: dagger.rs
crates/contractor/src/services/gitea/: extensions.rs  traits.rs
internal/bot/: giteabot.go
internal/features/: handle_gitea_events.go  handle_gitea_webhook.go  handle_github_events.go  handle_github_webhook.go
internal/models/: requests.go
internal/providers/: gitea.go  github.go
internal/queue/: goqueue.go
internal/renovate/: client.go
scripts/: ci:main.sh  ci:pr.sh  local:docker.sh  local:docker:docs.sh  mkdocs:dev.sh  mkdocs:new.sh
