[package]
name = "contractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenv.workspace = true
axum.workspace = true

serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time"] }
uuid = { version = "1.8.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
futures = "0.3.30"
reqwest = {version = "0.12.4", default-features = false, features = ["json", "rustls-tls"]}
itertools = "0.12.1"
regex = "1.10.4"
serde_json = "1.0.117"
dagger-sdk = "0.9.8"
backon = "0.4.4"
